Added: Effects to the buttons

--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,19 @@ migrate_working_dir/
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
+.flutter-plugins
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
 /build/
 /coverage/
+.metadata
+.env
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
 # Symbolication related
 app.*.symbols
