Refactor dashboard and login pages; move my_enrollments to cards, add logo card, and integrate Google sign-in button
- Updated import path for MyEnrollments in DashboardPage.
- Enhanced LoginPage with a new layout including a logo card and Google sign-in button.
- Removed MyEnrollments page and moved its content to a new file in cards.
- Created LogoCard widget for consistent logo representation.
- Added Google logo SVG asset for the sign-in button.
- Updated custom app bar to use LogoCard instead of hardcoded logo.
- Registered new plugins for desktop and web functionalities in generated files.
- Updated pubspec.yaml and pubspec.lock to include new dependencies and assets.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   maplibre_gl: ^0.25.0
+  flutter_svg: ^2.0.0
+  flutter_better_auth: ^0.1.3
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +64,7 @@ flutter:
     - assets/geojson/pulchowk.json
     - assets/geojson/pulchowk_mask.json
     - assets/style/pulchowk_style.json
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
