--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_core: ^4.3.0
   google_sign_in: ^6.2.2
   firebase_auth: ^6.1.3
+  http: ^1.2.0
+  intl: ^0.19.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
