--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.0
   intl: ^0.19.0
   cached_network_image: ^3.3.1
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
