feat: Implement interactive campus map with location search, navigation, and a custom app bar.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
     - assets/geojson/pulchowk.json
     - assets/style/pulchowk_style.json
     - assets/images/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
