--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,16 +88,16 @@ flutter_native_splash:
   android: true
   ios: true
 
-  color: "#ffffff"
-  color_dark: "#ffffff"
+  color: "#B088F9"
+  color_dark: "#B088F9"
   image: "assets/icons/foreground.png"
-  branding: "assets/icons/brandImage.png"
+  # branding: "assets/icons/brandImage.png"
 
   android_12:
-    color: "#ffffff"
-    color_dark: "#ffffff"
+    color: "#B088F9"
+    color_dark: "#B088F9"
     image: "assets/icons/foreground.png"
-    branding: "assets/icons/brandImage.png"
+    # branding: "assets/icons/brandImage.png"
 
 # The following section is specific to Flutter packages.
 flutter:
