--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   google_sign_in: ^6.2.2
   firebase_auth: ^6.1.3
   http: ^1.2.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   cached_network_image: ^3.3.1
   shared_preferences: ^2.5.4
   url_launcher: ^6.3.2
@@ -48,7 +48,7 @@ dependencies:
   flutter_native_splash: ^2.4.7
   connectivity_plus: ^7.0.0
   webview_flutter: ^4.13.1
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.1
   image_picker: ^1.2.1
   http_parser: ^4.1.2
   file_picker: ^10.3.10
@@ -61,6 +61,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
+  confetti: ^0.8.0
 
 dev_dependencies:
   flutter_test:
