--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_secure_storage: ^10.0.0
   path_provider: ^2.1.5
   confetti: ^0.8.0
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
